--- a/.github/workflows/test_imas2.yaml
+++ b/.github/workflows/test_imas2.yaml
@@ -56,7 +56,7 @@ jobs:
           curl -fsSL http://www.mdsplus.org/dist/mdsplus.gpg.key | sudo apt-key add -
           sudo sh -c "echo 'deb [arch=amd64] http://www.mdsplus.org/dist/Ubuntu22/repo MDSplus stable' > /etc/apt/sources.list.d/mdsplus.list"
           sudo apt-get update
-          sudo apt-get install -y mdsplus-devel
+          sudo apt-get install -y mdsplus mdsplus-devel
 
       - name: Build imas
         run: |
