--- a/.github/workflows/test_imas2.yaml
+++ b/.github/workflows/test_imas2.yaml
@@ -28,6 +28,18 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - uses: actions/cache@v3
+        with:
+          path: ${{ env.pythonLocation }}
+          key: ${{ env.pythonLocation }}-${{ hashFiles('setup.cfg') }}
+
+      - uses: actions/checkout@v3
+
       - name: Install libraries
         run: |
           sudo apt-get install -y xsltproc libhdf5-dev libblitz0-dev default-jre libboost-filesystem-dev
@@ -70,3 +82,142 @@ jobs:
           cat ./imas/source_me.sh
           . ./imas/source_me.sh
           python -c 'import imas'
+
+      - uses: actions/checkout@v3
+        with:
+          ssh-key: ${{ secrets.SSH_KEY_CONTAINERIZED_RUNS_REPO }}
+          repository: duqtools/containerized_runs
+          path: containerized_runs
+
+      - name: Put the IMAS db in the right location
+        run: |
+          mkdir /opt/imas/shared
+          mkdir -p ${HOME}/public/
+          ln -s `pwd`/containerized_runs/imasdb /opt/imas/shared/
+          ln -s `pwd`/containerized_runs/imasdb ${HOME}/public/imasdb
+          echo `pwd`/containerized_runs/imasdb
+          echo ${HOME}/public/imasdb
+
+      - uses: actions/cache@v3
+        with:
+          path: /home/v
+          key: ${{ hashFiles('setup.cfg') }}
+
+      - name: Create venv and setup duqtools
+        run: |
+          if ! test -d ".imasenv"; then
+            python3 -m venv .imasenv
+            . .imasenv/bin/activate
+            python -m pip install wheel
+            python -m pip install -e .[develop]
+          else
+            . .imasenv/bin/activate
+            python -m pip install -e .[develop]
+          fi
+
+          echo "VIRTUAL_ENV=${VIRTUAL_ENV}" >> $GITHUB_ENV
+          echo "PATH=${PATH}" >> $GITHUB_ENV
+
+      - name: Test if IMAS is really available
+        run: |
+          . /docker-entrypoint.sh
+          python -m imas
+
+      - name: Test paths
+        shell: python
+        run: |
+          from duqtools.api import ImasHandle
+          print(ImasHandle.from_string('root/test/11111/6666').path())
+          print(ImasHandle.from_string('test/11111/4444').path())
+
+      - name: Test with pytest
+        run: |
+          . /docker-entrypoint.sh
+          coverage run -p -m pytest
+
+      - name: Upload coverage data
+        uses: actions/upload-artifact@v3
+        with:
+          name: covdata
+          path: .coverage.*
+
+  coverage:
+    name: Coverage
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install coverage
+
+      - name: Download coverage data
+        uses: actions/download-artifact@v3
+        with:
+          name: covdata
+
+      - name: Combine
+        run: |
+          coverage combine
+
+      - name: Fix paths
+        shell: python
+        run: |
+          import sqlite3
+          from pathlib import Path
+
+          cwd = str(Path.cwd())
+
+          with sqlite3.connect('.coverage') as conn:
+            for (idx, path) in conn.execute('select * from file'):
+              new_path = path.replace('/__w/duqtools/duqtools', cwd)
+              q = 'update file set path = :new_path where id = :idx;'
+              conn.execute(q, {'idx': idx, 'new_path': new_path})
+            conn.commit()
+
+      - name: Report coverage
+        run: |
+          coverage json
+          export TOTAL=$(python -c "import json;print(json.load(open('coverage.json'))['totals']['percent_covered_display'])")
+          echo "total=$TOTAL" >> $GITHUB_ENV
+          echo "### Total coverage: ${TOTAL}%" >> $GITHUB_STEP_SUMMARY
+          echo $'\n```' >> $GITHUB_STEP_SUMMARY
+          coverage report >> $GITHUB_STEP_SUMMARY
+          echo $'\n```' >> $GITHUB_STEP_SUMMARY
+
+      - name: Make badge
+        if: ${{ github.ref == 'refs/heads/main' }}
+        uses: schneegans/dynamic-badges-action@v1.6.0
+        with:
+          auth: ${{ secrets.GIST_TOKEN }}
+          gistID: ea916a5b3c3d9bc59065a7304e4ca707
+          filename: covbadge.json
+          label: Coverage
+          message: ${{ env.total }}%
+          minColorRange: 50
+          maxColorRange: 90
+          valColorRange: ${{ env.total }}
+
+  sonar:
+    name: SonarCloud Upload
+    runs-on: ubuntu-latest
+    needs: test
+    if: github.event.pull_request.draft == false
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          # Shallow clones should be disabled for a better relevancy of analysis
+          fetch-depth: 0
+
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
