--- a/src/duqtools/data/duqtools.yaml
+++ b/src/duqtools/data/duqtools.yaml
@@ -1,31 +1,22 @@
+# Check out the documentation for more info:
+# https://duqtools.readthedocs.io/en/latest/config/
+tag: duqtools
 system: jetto
-quiet: false
 create:
-  runs_dir: ./runs_dir #TODO edit to output directory
-  template: ./template #TODO edit to directory with template
+  runs_dir: ./runs_dir # change to output directory
+  template: ./template # change to directory with template
   dimensions:
-  - operator: multiply
+  - variable: t_e
+    operator: multiply
+    values: [0.9, 1.0, 1.1]
     scale_to_error: false
-    values: [1.1, 1.2, 1.3]
-    variable: t_i_ave
-  - operator: multiply
+  - variable: zeff
+    operator: multiply
+    values: [0.9, 1.0, 1.1]
     scale_to_error: false
-    values: [1.1, 1.2, 1.3]
-    variable: zeff
-  - operator: copyto
-    scale_to_error: false
-    values: [296.0, 297.0]
-    variable: major_radius
   sampler:
     method: latin-hypercube
     n_samples: 3
-status:
-  in_file: jetto.in
-  msg_completed: 'Status : Completed successfully'
-  msg_failed: 'Status : Failed'
-  msg_running: 'Status : Running'
-  out_file: jetto.out
-  status_file: jetto.status
 submit:
   submit_command: sbatch
   submit_script_name: .llcmd
