added IMAS_HOME variable for tests

--- a/.github/workflows/test_imas.yaml
+++ b/.github/workflows/test_imas.yaml
@@ -123,6 +123,7 @@ jobs:
       - name: Test with pytest
         run: |
           . ./imas/source_me.sh
+          export IMAS_HOME=${HOME}
           coverage run -p -m pytest
 
       - name: Upload coverage data
