--- a/.github/workflows/test_imas.yaml
+++ b/.github/workflows/test_imas.yaml
@@ -66,7 +66,7 @@ jobs:
           if ! test -d ".imasenv"; then
             python3 -m venv .imasenv
             . .imasenv/bin/activate
-            python -m pip install wheel
+            python -m pip install -U pip wheel
             python -m pip install -e .[develop]
           else
             . .imasenv/bin/activate
