--- a/.github/workflows/test_imas.yaml
+++ b/.github/workflows/test_imas.yaml
@@ -59,14 +59,14 @@ jobs:
       - uses: actions/cache@v3
         with:
           path: .imasenv
-          key: ${{ hashFiles('setup.cfg') }}
+          key: ${{ hashFiles('pyproject.toml') }}
 
       - name: Create venv and setup duqtools
         run: |
           if ! test -d ".imasenv"; then
             python3 -m venv .imasenv
             . .imasenv/bin/activate
-            python -m pip install wheel
+            python -m pip install -U pip wheel
             python -m pip install -e .[develop]
           else
             . .imasenv/bin/activate
