--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -39,11 +39,6 @@ jobs:
           path: ${{ env.pythonLocation }}
           key: ${{ env.pythonLocation }}-${{ hashFiles('pyproject.toml') }}
 
-      - name: Python info
-        run: |
-          which python
-          python --version
-
       - name: Install dependencies
         if: steps.cache-virtualenv.outputs.cache-hit != 'true'
         run: |
@@ -72,12 +67,8 @@ jobs:
           path: ${{ env.pythonLocation }}
           key: docs-${{ env.pythonLocation }}-${{ hashFiles('pyproject.toml') }}
 
-      - name: Python info
-        run: |
-          which python
-          python --version
-
       - name: Install dependencies
+        if: steps.cache-virtualenv.outputs.cache-hit != 'true'
         run: |
           python -m pip install -e .[docs]
 
