--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -34,16 +34,13 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - uses: actions/cache@v3
+        id: cache-virtualenv
         with:
           path: ${{ env.pythonLocation }}
           key: ${{ env.pythonLocation }}-${{ hashFiles('pyproject.toml') }}
 
-      - name: Python info
-        run: |
-          which python
-          python --version
-
       - name: Install dependencies
+        if: steps.cache-virtualenv.outputs.cache-hit != 'true'
         run: |
           python -m pip install -e .[develop]
 
@@ -70,12 +67,8 @@ jobs:
           path: ${{ env.pythonLocation }}
           key: docs-${{ env.pythonLocation }}-${{ hashFiles('pyproject.toml') }}
 
-      - name: Python info
-        run: |
-          which python
-          python --version
-
       - name: Install dependencies
+        if: steps.cache-virtualenv.outputs.cache-hit != 'true'
         run: |
           python -m pip install -e .[docs]
 
