Remove work-around for python 3.9.7
imas/ual image now uses 3.9.13, so work-around is no longer necessary

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,8 +48,7 @@ dependencies = [
     "tqdm",
     "xarray",
     "jetto-tools >= 1.8.8",
-    "streamlit == 1.11;python_full_version=='3.9.7'",
-    "streamlit >= 1.12;python_full_version!='3.9.7'",
+    "streamlit >= 1.12",
 ]
 
 [project.urls]
