--- a/.github/workflows/test_imas.yaml
+++ b/.github/workflows/test_imas.yaml
@@ -65,7 +65,6 @@ jobs:
             python -m pip install -e .[develop]
           else
             . .imasenv/bin/activate
-            # python -m pip install -e .[develop]
           fi
 
           echo "VIRTUAL_ENV=${VIRTUAL_ENV}" >> $GITHUB_ENV
@@ -102,7 +101,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install coverage
+          python -m pip install coverage[toml]
 
       - name: Download coverage data
         uses: actions/download-artifact@v3
