--- a/.github/workflows/test_imas.yaml
+++ b/.github/workflows/test_imas.yaml
@@ -114,7 +114,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install coverage
+          python -m pip install coverage[toml]
 
       - name: Download coverage data
         uses: actions/download-artifact@v3
