Do not install typing-extensions 4.6.0

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,10 +46,12 @@ dependencies = [
     "pydantic-yaml",
     "scipy >= 1.09",
     "tqdm",
+    # 4.6.0  breaks duqtools on python 3.9 using pydantic <=1.10.7
+    # https://github.com/duqtools/duqtools/issues/616
+    "typing-extensions!=4.6.0",
     "xarray",
     "jetto-tools >= 1.8.8",
-    "streamlit == 1.11;python_full_version=='3.9.7'",
-    "streamlit >= 1.12;python_full_version!='3.9.7'",
+    "streamlit >= 1.12"
 ]
 
 [project.urls]
