Revise testing strategy and update python api (#610)
* Make system independent from global config

* Add fallback for JRUNS

* Add recreate api and test for recreate

* Xskip failing test module

* Update api for create and fix tests/notebook

* Update submit python api and add tests

* Add get_status python function and update tests

* Fix path to containerized runs dir

* Fix version parsing

* Fix coverage install

* Remove work-around for python 3.9.7

imas/ual image now uses 3.9.13, so work-around is no longer necessary

* Document imas test setup

* Remove imports of CFG everywhere except cli/operations/config modules

* get_system() now returns instance instead of Class

* fix ets6, remove print statement, ignore mypy typing

---------

Co-authored-by: Victor Azizi <victor@lipsum.eu>

--- a/.github/workflows/test_imas.yaml
+++ b/.github/workflows/test_imas.yaml
@@ -26,14 +26,9 @@ jobs:
           repository: duqtools/containerized_runs
           path: containerized_runs
 
-      - name: Put the IMAS db in the right location
+      - name: Set up containerized runs directory
         run: |
-          mkdir /opt/imas/shared
-          mkdir -p ${HOME}/public/
-          ln -s `pwd`/containerized_runs/imasdb /opt/imas/shared/
-          ln -s `pwd`/containerized_runs/imasdb ${HOME}/public/imasdb
-          echo `pwd`/containerized_runs/imasdb
-          echo ${HOME}/public/imasdb
+          echo "CONTAINERIZED_RUNS_DIR=`pwd`/containerized_runs" >> $GITHUB_ENV
 
       - name: Python and Environment info
         run: |
@@ -57,7 +52,6 @@ jobs:
             python -m pip install -e .[develop]
           else
             . .imasenv/bin/activate
-            python -m pip install -e .[develop]
           fi
 
           echo "VIRTUAL_ENV=${VIRTUAL_ENV}" >> $GITHUB_ENV
