--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,7 @@ dependencies = [
     "typing-extensions!=4.6.0",
     "xarray",
     "jetto-tools >= 1.8.8",
-    "streamlit >= 1.12"
+    "streamlit >= 1.12",
 ]
 
 [project.urls]
