--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,18 +23,18 @@ repos:
     rev: v0.2.0
     hooks:
       - id: nbcheckorder
-  - repo: https://github.com/pre-commit/mirrors-yapf
-    rev: v0.32.0
+  - repo: https://github.com/google/yapf
+    rev: v0.44.0
     hooks:
       - id: yapf
         additional_dependencies:
           - toml
   - repo: https://github.com/myint/docformatter
-    rev: v1.6.5
+    rev: v1.7.2
     hooks:
       - id: docformatter
   - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.0.267
+    rev: v0.0.272
     hooks:
       - id: ruff
         args: [--fix]
