--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -34,12 +34,12 @@ repos:
     hooks:
       - id: docformatter
   - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.0.272
+    rev: v0.0.274
     hooks:
       - id: ruff
         args: [--fix]
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.3.0
+    rev: v1.4.1
     hooks:
       - id: mypy
   - repo: https://github.com/nbQA-dev/nbQA
@@ -48,6 +48,6 @@ repos:
       - id: nbqa-yapf
         additional_dependencies: [toml, yapf]
         types_or: [jupyter]
-      - id: nbqa-ruff
-        args: [--fix, --ignore=E402]
-        types_or: [jupyter]
+      #- id: nbqa-ruff
+      #  args: [--fix, --ignore=E402]
+      #  types_or: [jupyter]
