--- a/.github/workflows/code-style.yml
+++ b/.github/workflows/code-style.yml
@@ -20,6 +20,6 @@ jobs:
     - uses: actions/setup-python@v4
       with:
           python-version: '3.11'
-    - run: pip install pydantic # Necessary for pydantic.mypy plugin for mypy
+    - run: pip install -e . # Necessary to check types of dependencies as well
 
     - uses: pre-commit/action@v3.0.0
