--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,7 @@ dependencies = [
     "importlib_resources;python_version<'3.10'",
     "numpy",
     "pandas",
-    "pydantic !=1.10.3, !=1.10.4, !=1.10.5",
+    "pydantic !=1.10.3, !=1.10.4, !=1.10.5, <2.0.0",
     "pydantic-yaml",
     "scipy >= 1.09",
     "tqdm",
