--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -42,6 +42,8 @@ repos:
     rev: v1.4.1
     hooks:
       - id: mypy
+        additional_dependencies:
+          - "pydantic<2.0.0"
   - repo: https://github.com/nbQA-dev/nbQA
     rev: 1.7.0
     hooks:
