--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,7 @@ dependencies = [
     "importlib_resources;python_version<'3.10'",
     "numpy",
     "pandas",
-    "pydantic !=1.10.3, !=1.10.4, !=1.10.5",
+    "pydantic !=1.10.3, !=1.10.4, !=1.10.5, <2.0.0",
     "pydantic-yaml",
     "scipy >= 1.09",
     "tqdm",
@@ -51,7 +51,7 @@ dependencies = [
     "typing-extensions!=4.6.0",
     "xarray",
     "jetto-tools >= 1.8.8",
-    "streamlit >= 1.12",
+    "streamlit >= 1.18",
 ]
 
 [project.urls]
@@ -114,7 +114,9 @@ data_file = ".coverage"
 testpaths = ["tests"]
 norecursedirs = ["tests/helpers"]
 
+
 [tool.mypy]
+plugins = "pydantic.mypy"
 ignore_missing_imports = true
 files = ["duqtools", "tests"]
 allow_redefinition = true
@@ -126,6 +128,7 @@ ignore_missing_imports = true
 [[tool.mypy.overrides]]
 module = ["pkg_resources.*"]
 ignore_missing_imports = true
+
 
 [tool.yapf]
 blank_line_before_nested_class_or_def = "True"
