--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,7 @@ dependencies = [
     "numpy",
     "pandas",
     "pydantic !=1.10.3, !=1.10.4, !=1.10.5, <2.0.0",
-    "pydantic-yaml",
+    "pydantic-yaml >= 1.0",
     "scipy >= 1.09",
     "tqdm",
     # 4.6.0  breaks duqtools on python 3.9 using pydantic <=1.10.7
