--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,9 +1,6 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
 ---
-exclude: |
-  (?x)
-  \.vol
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
@@ -43,7 +40,7 @@ repos:
     hooks:
       - id: mypy
         additional_dependencies:
-          - "pydantic<2.0.0"
+          - "pydantic >= 2.0.0"
   - repo: https://github.com/nbQA-dev/nbQA
     rev: 1.7.0
     hooks:
