--- a/.github/workflows/code-style.yml
+++ b/.github/workflows/code-style.yml
@@ -19,7 +19,17 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-python@v4
       with:
-          python-version: '3.11'
-    - run: pip install -e . # Necessary to check types of dependencies as well
+          python-version: '3.10'
+
+    - uses: actions/cache@v3
+      id: cache-virtualenv
+      with:
+        path: ${{ env.pythonLocation }}
+        key: ${{ env.pythonLocation }}-${{ hashFiles('pyproject.toml') }}
+
+    - name: Install dependencies
+      if: steps.cache-virtualenv.outputs.cache-hit != 'true'
+      run: |
+        python -m pip install -e .[develop]
 
     - uses: pre-commit/action@v3.0.0
