--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ classifiers = [
     "Topic :: Scientific/Engineering",
 ]
 dependencies = [
-    "altair",
+    "altair >= 5.0",
     "click",
     "gitpython",
     "jinja2 >= 3.0",
