Jetto variables can now be used as an input to IDS Operations

--- a/tests/test_data/config_list-vars.yaml
+++ b/tests/test_data/config_list-vars.yaml
@@ -4,3 +4,8 @@ extra_variables:
     path: profiles_1d/*/t_i_average
     dims: [time, x]
     type: IDS-variable
+  - name: test
+    ids: core_profiles
+    path: data/0/test
+    dims: [time]
+    type: IDS-variable
