require minimal typing_extension version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,7 @@ dependencies = [
     "scipy >= 1.09",
     "streamlit >= 1.18",
     "tqdm",
-    "typing-extensions",
+    "typing-extensions >= 4.7.1",
     "xarray",
 ]
 
