--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
-recursive-include src *.txt *.md *.py *.yaml *.json
+recursive-include src *.txt *.md *.py *.yaml *.json *.png
 include LICENSE
 include README.md
