--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,7 @@ repo_name: GitHub
 
 nav:
   - Home: index.md
+  - Quickstart: quickstart.md
   - Usage: command-line-interface.md
   - Configuration:
     - Getting Started: config/index.md
