--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,7 @@ repo_name: GitHub
 nav:
   - Home: index.md
   - Quickstart (Gateway): quickstart_gateway.md
-  - Usage: command-line-interface.md
+  - Duqtools CLI: command-line-interface.md
   - Configuration:
     - Getting Started: config/index.md
     - config/setup.md
