--- a/pyproject.toml
+++ b/pyproject.toml
@@ -128,11 +128,16 @@ ignore_missing_imports = true
 blank_line_before_nested_class_or_def = "True"
 
 [tool.ruff]
+target-version = "py39"
+line-length = 96
+
+[tool.lint.ruff]
 select = [
 	"F",    # Pyflakes
 	"E",    # pycodestyle (error)
 	"W",    # pycodestyle (warning)
 	"I",    # isort
+    "NPY201",  # numpy 2.0 deprecations
 ]
 ignore = []
 
@@ -168,15 +173,9 @@ per-file-ignores = {}
 # Allow unused variables when underscore-prefixed.
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
-target-version = "py39"
-line-length = 96
-
-[tool.ruff.isort]
+[tool.ruff.lint.isort]
 known-first-party = ["duqtools"]
 required-imports = ["from __future__ import annotations"]
-
-[tool.isort]
-profile = "black"
 
 [tool.bumpversion]
 current_version = "3.1.0"
