--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -34,7 +34,7 @@ repos:
     rev: v0.6.7
     hooks:
       - id: ruff
-        args: [--fix]
+        args: [--fix, '--extend-exclude', '*.ipynb']
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.11.2
     hooks:
