--- a/pyproject.toml
+++ b/pyproject.toml
@@ -194,3 +194,8 @@ replace = "version = \"{new_version}\""
 filename = "CITATION.cff"
 search = "version: {current_version}"
 replace = "version: {new_version}"
+
+[[tool.bumpversion.files]]
+filename = "README.md"
+search = "duqtools/{current_version}"
+replace = "duqtools/{new_version}"
