--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,10 +26,10 @@ repos:
       - id: yapf
         additional_dependencies:
           - toml
-  - repo: https://github.com/myint/docformatter
-    rev: v1.7.5
-    hooks:
-      - id: docformatter
+  #- repo: https://github.com/myint/docformatter
+  #  rev: v1.7.5
+  #  hooks:
+  #    - id: docformatter
   - repo: https://github.com/charliermarsh/ruff-pre-commit
     rev: v0.11.5
     hooks:
